# fitle

./: .gitignore  LICENSE  README.md  __init__.py  compiler.py  cost.py  fitting.py  loss.py  mnp.py  model.py  param.py  pdfs.py  pyproject.toml
.ipynb_checkpoints/: __init__-checkpoint.py  compiler-checkpoint.py  fitting-checkpoint.py  mnp-checkpoint.py  model-checkpoint.py  param-checkpoint.py  pdfs-checkpoint.py
docs/: convolve_section.tex  fitle_appendix_updated.tex  notebook_update_plan.md
notebooks/: 01_overview.ipynb  02_linear_fit.ipynb  03_double_gaussian.ipynb  04_crystal_ball.ipynb  05_convolution.ipynb  Untitled.ipynb  gauss_test.ipynb  gyro_simulation.py  linear.ipynb  size_test.ipynb  test.ipynb
notebooks_remote/: binning_schemes.ipynb  fitle.ipynb  monte_carlo.ipynb  monte_carlo_analysis.ipynb  real_data_kkp.ipynb  real_data_kpp.ipynb
notebooks_remote/misc/: kpp_splits.ipynb
src/fitle/: __init__.py  compiler.py  cost.py  fitting.py  mnp.py  model.py  param.py  pdfs.py
src/fitle.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: size_test.ipynb  test_cost.py  test_fitting.py  test_model.py  test_numpy_integration.py  test_param.py  test_param_builder.py  test_pdfs.py
