[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fitle"
version = "0.1.0"
description = "A tiny, fast library for building statistical models, compiling them to Numba, and fitting with iminuit."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    { name="Trey Warner", email="trey.warner@hey.com" }
]
dependencies = [
    "numpy",
    "numba",
    "iminuit",
]

[project.optional-dependencies]
dev = ["pytest", "matplotlib"]

[tool.setuptools.packages.find]
where = ["src"]
